# may-2024-python-core

./: lesson1-hw.py  lesson1.py  lesson2-hw.py  lesson2.py  lesson3.py  lesson4-hw.py  lesson4.py  pyproject.toml
lesson5/: async.py  async_cats.py  multiprocess.py  threads.py
